# air_quality_monitor

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  models.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: deploy.yml
air_quality_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
migrations/versions/: 7458f474ec57_create_initial_tables_for_line_.py
nginx/: nginx.conf
nginx/conf.d/: air_quality_monitor.conf
static/: output.css
static/src/: input.css
templates/: index.html  manual_line_binding.html  preferences.html
utils/: distance.py
